--- a/SurucuEhliyeti/SurucuEhliyeti/Controllers/Core/DersNotlari/DersNotlariViewController.xib
+++ b/SurucuEhliyeti/SurucuEhliyeti/Controllers/Core/DersNotlari/DersNotlariViewController.xib
@@ -10,6 +10,16 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DersNotlariViewController" customModule="SurucuEhliyeti" customModuleProvider="target">
             <connections>
+                <outlet property="AGPIButton" destination="BrD-Or-Lxo" id="BCw-5U-Nxh"/>
+                <outlet property="TKVCBButton" destination="N7w-c1-kq3" id="f29-He-RLY"/>
+                <outlet property="aracTeknigiButton" destination="ifo-Nd-iGa" id="I7V-MH-S9Z"/>
+                <outlet property="ilkYardimButton" destination="gN1-rD-tLw" id="Oqy-Mv-krT"/>
+                <outlet property="levhalarButton" destination="Chs-to-xDi" id="SA9-O5-mXI"/>
+                <outlet property="polisIsaretleriButton" destination="ECg-sn-Mbn" id="6XN-Gj-bev"/>
+                <outlet property="sikSorulanSorularButton" destination="YOY-bp-io3" id="p8G-Dp-yOl"/>
+                <outlet property="sinavHakkindaButton" destination="UH1-Kw-oc4" id="Ldl-He-rxI"/>
+                <outlet property="trafikAdabiButton" destination="bn4-jB-gxX" id="HIL-w7-ceJ"/>
+                <outlet property="trafikIsaretleriButton" destination="gS5-wb-Xxs" id="nk0-lD-IM6"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -53,11 +63,11 @@
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BrD-Or-Lxo">
                             <rect key="frame" x="0.0" y="0.0" width="165" height="80"/>
-                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" name="ButtonBackground"/>
                             <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <state key="normal" title="Button"/>
                             <buttonConfiguration key="configuration" style="plain" title="Araç Gösterge Paneli İşaretleri">
-                                <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="baseForegroundColor" name="TextColor"/>
                             </buttonConfiguration>
                             <connections>
                                 <action selector="AGPIButton:" destination="-1" eventType="touchUpInside" id="Lea-3x-STs"/>
@@ -65,10 +75,10 @@
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gN1-rD-tLw">
                             <rect key="frame" x="185" y="0.0" width="165" height="80"/>
-                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" name="ButtonBackground"/>
                             <state key="normal" title="Button"/>
                             <buttonConfiguration key="configuration" style="plain" title="İlk Yardım">
-                                <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="baseForegroundColor" name="TextColor"/>
                             </buttonConfiguration>
                             <connections>
                                 <action selector="ilkYardimButton:" destination="-1" eventType="touchUpInside" id="XxL-4Z-r4b"/>
@@ -84,10 +94,10 @@
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Chs-to-xDi">
                             <rect key="frame" x="0.0" y="0.0" width="165" height="80"/>
-                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" name="ButtonBackground"/>
                             <state key="normal" title="Button"/>
                             <buttonConfiguration key="configuration" style="plain" title="Levhalar">
-                                <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="baseForegroundColor" name="TextColor"/>
                             </buttonConfiguration>
                             <connections>
                                 <action selector="levhalarButton:" destination="-1" eventType="touchUpInside" id="FMq-s6-R6b"/>
@@ -95,10 +105,10 @@
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N7w-c1-kq3">
                             <rect key="frame" x="185" y="0.0" width="165" height="80"/>
-                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" name="ButtonBackground"/>
                             <state key="normal" title="Button"/>
                             <buttonConfiguration key="configuration" style="plain" title="Trafik Kuralları Ve Çevre Bilgisi" subtitle="">
-                                <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="baseForegroundColor" name="TextColor"/>
                             </buttonConfiguration>
                             <connections>
                                 <action selector="TKVCBButton:" destination="-1" eventType="touchUpInside" id="gnB-ok-8GT"/>
@@ -114,10 +124,10 @@
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bn4-jB-gxX">
                             <rect key="frame" x="0.0" y="0.0" width="165" height="80"/>
-                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" name="ButtonBackground"/>
                             <state key="normal" title="Button"/>
                             <buttonConfiguration key="configuration" style="plain" title="Trafik Adabı">
-                                <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="baseForegroundColor" name="TextColor"/>
                             </buttonConfiguration>
                             <connections>
                                 <action selector="trafikAdabiButton:" destination="-1" eventType="touchUpInside" id="twa-bz-7dH"/>
@@ -125,10 +135,10 @@
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ifo-Nd-iGa">
                             <rect key="frame" x="185" y="0.0" width="165" height="80"/>
-                            <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" name="ButtonBackground"/>
                             <state key="normal" title="Button"/>
                             <buttonConfiguration key="configuration" style="plain" title="Araç Tekniği">
-                                <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="baseForegroundColor" name="TextColor"/>
                             </buttonConfiguration>
                             <connections>
                                 <action selector="aracTeknigiButton:" destination="-1" eventType="touchUpInside" id="ihg-Wb-6OD"/>
@@ -144,10 +154,10 @@
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UH1-Kw-oc4">
                             <rect key="frame" x="0.0" y="0.0" width="165" height="80"/>
-                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" name="ButtonBackground"/>
                             <state key="normal" title="Button"/>
                             <buttonConfiguration key="configuration" style="plain" title="Sınav Hakkında">
-                                <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="baseForegroundColor" name="TextColor"/>
                             </buttonConfiguration>
                             <connections>
                                 <action selector="sinavHakkindaButton:" destination="-1" eventType="touchUpInside" id="6xP-fT-HLW"/>
@@ -155,10 +165,10 @@
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YOY-bp-io3">
                             <rect key="frame" x="185" y="0.0" width="165" height="80"/>
-                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" name="ButtonBackground"/>
                             <state key="normal" title="Button"/>
                             <buttonConfiguration key="configuration" style="plain" title="Sık Sorulan Sorular">
-                                <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="baseForegroundColor" name="TextColor"/>
                             </buttonConfiguration>
                             <connections>
                                 <action selector="sikSorulanSorularButton:" destination="-1" eventType="touchUpInside" id="yrj-yj-h3D"/>
